--- a/index.html
+++ b/index.html
@@ -4,141 +4,74 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Agentic Zoning Validation Assistant — Concept Demo Map</title>
-  <meta name="description" content="Concept demo UI for an Agentic Zoning Validation Assistant integrating SDI maps, ArcGIS Knowledge, and vector databases for explainable compliance." />
+  <meta name="description" content="Concept demo UI with a live Leaflet map (no API key) to showcase an Agentic Zoning Validation Assistant." />
+
+  <!-- Leaflet (CDN, no key needed) -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="anonymous"/>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+          integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="anonymous"></script>
+
   <style>
     :root{
-      --bg:#f4f7fb;
-      --card:#ffffff;
-      --ink:#0f172a;
-      --muted:#5b6b82;
-      --accent:#1976d2;
-      --accent-2:#7c4dff;
-      --ok:#16a34a;
-      --warn:#ef4444;
-      --chip:#e9eef7;
-      --ring:0 10px 30px rgba(23,38,79,.08);
-      --radius:18px;
+      --bg:#f4f7fb; --card:#fff; --ink:#0f172a; --muted:#5b6b82;
+      --accent:#1976d2; --accent2:#7c4dff; --ring:0 10px 30px rgba(23,38,79,.08);
+      --radius:18px; --line:#e7ecf5; --ok:#16a34a;
     }
     *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      background:var(--bg);
-      color:var(--ink);
-      font:16px/1.5 "Inter", system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial;
-      letter-spacing:.2px;
-    }
+    body{margin:0;background:var(--bg);color:var(--ink);
+      font:16px/1.5 "Inter", system-ui, -apple-system, Segoe UI, Roboto, Arial;}
 
     /* Header */
-    .hero{
-      position:sticky; top:0; z-index:5;
-      padding:28px 20px 40px;
-      background:linear-gradient(115deg, var(--accent) 0%, #3f8cff 40%, var(--accent-2) 100%);
-      color:#fff;
-      box-shadow:0 6px 30px rgba(0,0,0,.1);
-    }
-    .hero .wrap{max-width:1200px;margin:0 auto;position:relative}
-    .badge{
-      position:absolute; right:0; top:-8px;
-      background:rgba(255,255,255,.15);
-      color:#fff; padding:6px 12px;
-      font-size:12px; border-radius:999px;
-      border:1px solid rgba(255,255,255,.35);
-      backdrop-filter:blur(6px);
-    }
-    h1{margin:0 0 6px;font-weight:800;letter-spacing:.3px}
+    .hero{position:sticky;top:0;z-index:10;padding:28px 20px 40px;
+      background:linear-gradient(115deg,var(--accent) 0%,#3f8cff 40%,var(--accent2) 100%);
+      color:#fff;box-shadow:0 6px 30px rgba(0,0,0,.1)}
+    .wrap{max-width:1200px;margin:0 auto;position:relative}
+    .badge{position:absolute;right:0;top:-8px;background:rgba(255,255,255,.16);color:#fff;
+      padding:6px 12px;border-radius:999px;border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(6px);font-size:12px}
+    h1{margin:0 0 6px;font-weight:800}
     .subtitle{margin:0;opacity:.95;max-width:960px}
 
     /* Layout */
     .container{max-width:1200px;margin:-22px auto 40px;padding:0 20px}
-    .grid{
-      display:grid;
-      grid-template-columns:360px 1fr;
-      gap:22px;
-      align-items:start;
-    }
-    @media(max-width:980px){.grid{grid-template-columns:1fr}}
+    .grid{display:grid;grid-template-columns:360px 1fr;gap:22px;align-items:start}
+    @media (max-width:980px){.grid{grid-template-columns:1fr}}
 
-    .card{
-      background:var(--card);
-      border-radius:var(--radius);
-      box-shadow:var(--ring);
-      border:1px solid #e7ecf5;
-    }
-    .card .hd{
-      font-weight:700;font-size:15px;letter-spacing:.2px;
-      color:var(--muted);text-transform:uppercase;
-      padding:14px 18px;border-bottom:1px dashed #e8eef6;
-      background:linear-gradient(180deg,#f9fbff,#fff 30%);
-      border-top-left-radius:var(--radius);border-top-right-radius:var(--radius);
-    }
+    .card{background:var(--card);border-radius:var(--radius);box-shadow:var(--ring);border:1px solid var(--line)}
+    .card .hd{font-weight:700;font-size:15px;letter-spacing:.2px;color:var(--muted);text-transform:uppercase;
+      padding:14px 18px;border-bottom:1px dashed #e8eef6;background:linear-gradient(180deg,#f9fbff,#fff 30%);
+      border-top-left-radius:var(--radius);border-top-right-radius:var(--radius)}
     .card .bd{padding:18px}
 
     /* Inputs */
     .field{margin:0 0 14px}
     .label{display:block;font-size:12px;text-transform:uppercase;color:var(--muted);margin:0 0 6px}
-    .input{
-      width:100%;border:1px solid #dfe7f3;border-radius:12px;
-      padding:12px 14px;outline:none;background:#fbfdff;
-      transition:border .15s,box-shadow .15s;
-    }
-    .input:focus{border-color:#9ab7ff;box-shadow:0 0 0 4px rgba(99,134,255,.15)}
+    .input{width:100%;border:1px solid #dfe7f3;border-radius:12px;padding:12px 14px;background:#fbfdff;outline:none}
     .btns{display:flex;gap:12px;flex-wrap:wrap;margin-top:10px}
-    .btn{
-      border:0;cursor:pointer;padding:10px 14px;border-radius:12px;
-      font-weight:600;box-shadow:var(--ring);
-    }
+    .btn{border:0;padding:10px 14px;border-radius:12px;font-weight:600;box-shadow:var(--ring);cursor:not-allowed}
     .btn.primary{background:#2383ff;color:#fff}
     .btn.ghost{background:#eef4ff;color:#274472}
-    .note{
-      font-size:13px;color:var(--muted);
-      background:#f6f9ff;border:1px dashed #dbe6fb;border-radius:14px;padding:14px;
-    }
+    .note{font-size:13px;color:var(--muted);background:#f6f9ff;border:1px dashed #dbe6fb;border-radius:14px;padding:14px}
 
-    /* Map */
-    .map-card{position:relative;overflow:hidden}
-    .map-frame{position:relative;margin:18px;border-radius:18px;overflow:hidden;border:1px solid #e3e9f4}
-    .map-img{
-      display:block;width:100%;height:520px;object-fit:cover;
-      background-image:url('https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb?q=80&w=1400&auto=format&fit=crop');
-      background-size:cover;background-position:center;
-      filter:saturate(0.9) contrast(1.02);
-    }
-    .map-ui{position:absolute;inset:0;pointer-events:none;}
-    .ctrl{position:absolute;left:18px;top:18px;display:flex;flex-direction:column;gap:8px;}
-    .ctrl button{
-      pointer-events:auto;width:36px;height:36px;border-radius:10px;border:1px solid #dce6f5;
-      background:#fff;font-weight:800;box-shadow:var(--ring);
-    }
-    .chip{
-      position:absolute;left:50%;top:50%;transform:translate(-50%,-20%);
-      background:#fff;padding:10px 16px;border-radius:12px;color:#7c2332;
-      border:2px solid rgba(242,104,112,.6);box-shadow:0 6px 18px rgba(242,104,112,.2);
-      pointer-events:none;
-    }
-    .chip::before{content:"Violation";font-weight:700;letter-spacing:.2px}
-    .legend{
-      position:absolute;right:18px;bottom:18px;background:rgba(255,255,255,.9);
-      border:1px solid #e2e8f4;border-radius:12px;padding:8px 10px;font-size:12px;color:#334;
-      backdrop-filter:blur(6px);
-    }
+    /* Map (Leaflet) */
+    #map{height:540px;margin:18px;border-radius:18px;border:1px solid #e3e9f4}
+    .leaflet-container{border-radius:18px}
 
     /* Results */
     .rows{display:grid;grid-template-columns:1fr 1fr;gap:22px;margin-top:22px}
-    @media(max-width:980px){.rows{grid-template-columns:1fr}}
+    @media (max-width:980px){.rows{grid-template-columns:1fr}}
     .kv{display:grid;grid-template-columns:140px 1fr;gap:10px;padding:6px 0;border-bottom:1px dashed #eef1f8}
     .kv:last-child{border-bottom:0}
     .pill{display:inline-flex;align-items:center;gap:6px;font-weight:800;font-size:12px;border-radius:999px;padding:4px 8px}
     .pill.ok{background:#e8f8ee;color:#0b7a2f;border:1px solid #bfe9cc}
 
-    /* Footer */
-    footer{text-align:center;color:#72809a;font-size:13px;margin:28px 0 40px;}
+    footer{text-align:center;color:#72809a;font-size:13px;margin:28px 0 40px}
     footer a{color:#577df6;text-decoration:none}
     footer a:hover{text-decoration:underline}
   </style>
 </head>
 <body>
-  <header class="hero">
+  <header class="hero" role="banner">
     <div class="wrap">
       <span class="badge">Demo — Not live data</span>
       <h1>Agentic Zoning Validation Assistant — Concept Demo Map</h1>
@@ -148,10 +81,10 @@
     </div>
   </header>
 
-  <main class="container">
+  <main class="container" role="main">
     <section class="grid">
-      <!-- Left panel -->
-      <aside class="card">
+      <!-- Left: Inputs -->
+      <aside class="card" aria-label="Inputs and safety">
         <div class="hd">Inputs</div>
         <div class="bd">
           <div class="field">
@@ -181,37 +114,27 @@
         </div>
       </aside>
 
-      <!-- Map panel -->
-      <section class="card map-card">
-        <div class="hd">Map (Concept Visualization)</div>
-        <div class="map-frame">
-          <div class="map-img"></div>
-          <div class="map-ui">
-            <div class="ctrl"><button>+</button><button>−</button></div>
-            <div class="chip"></div>
-            <div class="legend">
-              <strong>Legend</strong><br/>
-              <span style="display:inline-block;width:10px;height:10px;background:#e28fb0;border:1px solid #c46a89;margin-right:6px;border-radius:2px"></span>
-              Violation (buffer)
-            </div>
-          </div>
-        </div>
+      <!-- Right: LIVE MAP -->
+      <section class="card" aria-label="Map view">
+        <div class="hd">Map (Interactive — Leaflet + OSM)</div>
+        <div id="map" role="application" aria-label="Interactive map of Bahrain with demo overlays"></div>
       </section>
     </section>
 
-    <section class="rows">
-      <article class="card">
-        <div class="hd">Compliance Result</div>
+    <!-- Results row -->
+    <section class="rows" aria-label="Results and evidence">
+      <article class="card" aria-labelledby="res-h">
+        <div class="hd" id="res-h">Compliance Result</div>
         <div class="bd">
           <div class="kv"><div>Parcel</div><div>202A-1156</div></div>
           <div class="kv"><div>Zone</div><div>B1 (Residential)</div></div>
           <div class="kv"><div>Decision</div><div>Compliant — <span class="pill ok">PASS</span></div></div>
-          <div class="kv"><div>Notes</div><div>Setbacks & FAR within limits; height check satisfied.</div></div>
+          <div class="kv"><div>Notes</div><div>Setbacks &amp; FAR within limits; height check satisfied.</div></div>
         </div>
       </article>
 
-      <article class="card">
-        <div class="hd">Evidence & Audit</div>
+      <article class="card" aria-labelledby="ev-h">
+        <div class="hd" id="ev-h">Evidence &amp; Audit</div>
         <div class="bd">
           <div class="kv"><div>Sources</div><div>SDI Maps (ArcGIS Enterprise)</div></div>
           <div class="kv"><div>Query</div><div>REST/OGC (read-only)</div></div>
@@ -224,34 +147,48 @@
   </main>
 
   <footer>
-    © 2025 · Aduri Sreenivas · Concept demo UI (static). No live data shown. ·
+    © 2025 · Aduri Sreenivas · Concept demo UI (static sources). Map tiles © OpenStreetMap contributors. ·
     <a href="https://aduri123.github.io/agentic-zoning-validation-ui/" target="_blank" rel="noopener">Project Home</a>
   </footer>
 
+  <!-- Map script -->
   <script>
-    (function(){
-      let hinted=false;
-      const els=[...document.querySelectorAll('#parcel,#layer,#rules')];
-      els.forEach(el=>{
-        el.addEventListener('input', ()=>{
-          if(hinted) return;
-          hinted=true;
-          const tip=document.createElement('div');
-          tip.textContent='Demo only — inputs are not submitted.';
-          Object.assign(tip.style,{
-            position:'fixed',left:'50%',bottom:'24px',transform:'translateX(-50%)',
-            background:'#111827',color:'#fff',padding:'10px 14px',borderRadius:'10px',
-            boxShadow:'0 8px 24px rgba(0,0,0,.25)',fontSize:'13px',zIndex:20,opacity:'0',
-            transition:'opacity .2s'
-          });
-          document.body.appendChild(tip);
-          requestAnimationFrame(()=> tip.style.opacity='1');
-          setTimeout(()=> tip.style.opacity='0',2200);
-          setTimeout(()=> tip.remove(),2600);
-        });
-      });
-    })();
+    // Center on Bahrain
+    const map = L.map('map', { zoomControl: true, attributionControl: true })
+      .setView([26.0667, 50.5577], 11);
+
+    // OSM tiles (no API key)
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+      maxZoom: 19,
+      attribution: '&copy; OpenStreetMap contributors'
+    }).addTo(map);
+
+    // Demo polygon (pretend zoning violation area)
+    const poly = L.polygon([
+      [26.0987, 50.5195],
+      [26.1025, 50.5375],
+      [26.0865, 50.5400],
+      [26.0842, 50.5225]
+    ], {
+      color: '#d23f5b', weight: 2, fillColor: '#f4a2b1', fillOpacity: 0.35
+    }).addTo(map).bindPopup('Demo: Violation buffer');
+
+    // Demo marker label
+    const marker = L.marker([26.0935, 50.5310]).addTo(map)
+      .bindTooltip('Violation', { permanent: true, direction: 'top', className: 'violation-tip' });
+
+    // Ensure everything is visible
+    map.fitBounds(poly.getBounds().pad(0.5));
+
+    // Optional: nicer tooltip style
+    const style = document.createElement('style');
+    style.textContent = `
+      .violation-tip {
+        background:#fff; color:#7c2332; border:2px solid rgba(242,104,112,.6);
+        border-radius:12px; padding:6px 10px; font-weight:700; box-shadow:0 6px 18px rgba(242,104,112,.15);
+      }
+    `;
+    document.head.appendChild(style);
   </script>
 </body>
 </html>
-
